updating under construction for mobile

--- a/src/Pages/UnderConstruction.css
+++ b/src/Pages/UnderConstruction.css
@@ -18,15 +18,36 @@
 }
 
 .image-container{
+    height: 100vh;
     z-index: 1;
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 
+@media only screen and (max-width: 600px) {
+    img {
+      width: 800px;
+    }
+
+    .heading h2{
+        font-size: 1.5rem;
+        letter-spacing: 0.5rem;
+    }
+
+    .heading{
+        top:6rem;
+    }
+  }
+
 img{
-    min-width: 960px;
+    min-width: 600px;
     max-width: 1080px;
     object-fit: cover;
 }
@@ -40,7 +61,7 @@ img{
 .socials-container{
     padding: 0;
     margin: 0;
-    position: absolute;
+    position: fixed;
     right: 2rem;
     bottom: 2rem;
     display: flex;
