--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden; /* Hide scrollbars */
+  margin:0px;
+  width:100vw;
+  height:100vh;
+  overflow:auto;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 html{
   margin: 0;
-  padding: 0;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
