--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin:0px;
   width:100vw;
   height:100vh;
-  overflow:auto;
+  overflow:hidden;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
