--- a/src/Pages/Clues.css
+++ b/src/Pages/Clues.css
@@ -4,7 +4,47 @@
     justify-content: center;
     align-items: center;
 }
+.text-container{
+    width:400px;
+    text-align: center;
+}
 
-.text-container p{
+.myImage-container{
+    width:400px;
+    height:400px;
+    background: url('../Images/final-clue.jpg');
+    background-size: cover;
+    background-position: center;
+    margin-top: 1rem;
+    border-radius: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .text-container{
+        width: 300px;
+    }
+
+    .myImage-container{
+        width: 300px;
+    }
+
+}
+
+.text{
+    margin-top: 1rem !important;
     margin:0;
 }
+
+.primary-button{
+    width: 100%;
+    height:48px;
+    color:#fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 0.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
