--- a/src/Pages/UnderConstruction.css
+++ b/src/Pages/UnderConstruction.css
@@ -14,9 +14,9 @@
 
 .heading h2{
     width: 100%;
-    font-size: 2rem;
-    font-weight: 500;
-    letter-spacing: 1rem;
+    font-size: 3rem;
+    font-weight: 400;
+    letter-spacing: 3rem;
     margin: 0 auto;
 }
 
@@ -31,7 +31,12 @@
     background-position: center;
 
 }
-
+@media only screen and (max-width: 900px) {
+    .heading h2{
+        font-size: 2rem;
+        letter-spacing: 1rem;
+    }
+}
 @media only screen and (max-width: 600px) {
 
     .heading h2{
@@ -90,7 +95,7 @@
 
 .textTag{
     text-decoration: none;
-    color:#007bff;
+    color:#2e2e2e;
     margin: 0;
     padding: 0;
     position: absolute;
