--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
 body {
   margin:0px;
-  overflow:hidden;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,h2,h3,h4,p,a{
+  margin:0;
+  padding:0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+p{
+  font-size: 0.875rem;
 }
 
 html{
