--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
-  margin:0px;
+body,html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
