--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -1,85 +1,90 @@
-.workitems{
-    display: flex;
-    gap:1rem;
+.workitems {
+  display: flex;
+  gap: 2rem;
 }
-.workitem-container{
-   width:100%;
-   height: 19rem;
-   background-color: #fff;
-   filter: drop-shadow(0rem 0.5rem 0.5rem rgb(0 0 0 / 0.25));
-   border-radius: 0.5rem;
-}
-
-.workitem-container img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top:0;
-    z-index: -2;
-    border-radius: 0.5rem;
+.workitem-container {
+  width: 100%;
+  height: 19rem;
+  background-color: #fff;
+  filter: drop-shadow(0rem 1rem 1rem rgb(27 0 49 / 0.15));
+  border-radius: 0.5rem;
+  transition: transform 0.2s;
+  position: relative;
 }
 
-.workitem-content{
-    position: absolute;
-    opacity: 0;
-    bottom:0;
-    padding:1rem;
-    color: #fff;
-    isolation: isolate;
-    transform: translateY(0.5rem);
-    transition: opacity 0.2s, transform 0.5s;
-}
-.workitem-container h4{
-    color: #5D4FFF;
-    font-weight: 600;
-}
-.workitem-content p{
-    color: #2e2e2e;
-    margin-top: 0.5rem;
-    font-weight: 300;
+.project-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  z-index: -2;
+  border-radius: 0.5rem;
 }
 
-.work-item-background{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    width:100%;
-    height: 0rem;
-    background-color: #fff;
-    border-radius: 0rem 0rem 0.5rem 0.5rem;
-    transition: opacity 0.5s;
+.workitem-content {
+  position: absolute;
+  opacity: 0;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  isolation: isolate;
+  transform: translateY(0.5rem);
+  transition: opacity 0.2s, transform 0.5s;
+}
+.workitem-container h4 {
+  color: #5d4fff;
+  font-weight: 600;
+}
+.workitem-content p {
+  color: #2e2e2e;
+  margin-top: 0.5rem;
+  font-weight: 300;
+}
+
+.work-item-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 0rem;
+  background-color: #fff;
+  border-radius: 0rem 0rem 0.5rem 0.5rem;
+  transition: opacity 0.5s;
 }
 
 .workitem-container:hover > .workitem-content {
-    transform: translateY(-0.5rem);
-    opacity: 1;
+  transform: translateY(-0.5rem);
+  opacity: 1;
 }
 .workitem-container:hover > .work-item-background {
-    opacity: 1;
-    height: 8rem;
+  opacity: 1;
+  height: 8rem;
 }
 
-@media only screen and (max-width: 481px){
-    .workitems{
-        flex-wrap: nowrap;
-        overflow-y: hidden;
-        overflow-x: auto;
-        padding: 1rem 2rem 2rem 1rem;
-    }
-    .workitem-container{
-        width: 19rem;
-        flex: 0 0 auto;
-    }
-    .workitem-content{
-        opacity: 1;
-        padding-bottom: 2rem;
-    }
+.workitem-container:hover {
+  transform: scale(1.05);
+}
 
-    .work-item-background{
-        opacity: 1;
-        height: 8rem;
-    }
-    
+@media only screen and (max-width: 481px) {
+  .workitems {
+    flex-wrap: nowrap;
+    overflow-y: hidden;
+    overflow-x: auto;
+    padding: 1rem 2rem 4rem 1rem;
   }
+  .workitem-container {
+    width: 19rem;
+    flex: 0 0 auto;
+  }
+  .workitem-content {
+    opacity: 1;
+    padding-bottom: 2rem;
+  }
+
+  .work-item-background {
+    opacity: 1;
+    height: 8rem;
+  }
+}
