--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,23 +1,27 @@
-.header-background{
+.header-background {
   width: 100%;
   height: 100vh;
   position: absolute;
-  background-image: linear-gradient(120deg,rgba( 255 255 255 / 0),rgba( 255 255 255 / 0), rgba(93 79 255 / 1));
+  background-image: linear-gradient(
+    120deg,
+    rgba(255 255 255 / 0),
+    rgba(255 255 255 / 0),
+    rgba(93 79 255 / 1)
+  );
   z-index: -1;
-  top:0;
+  top: 0;
   left: 0;
   right: 0;
-}  
+}
 
-.my-work-container{
+.my-work-container {
   padding: 0rem 2rem;
   margin-top: 4rem !important;
   max-width: 60rem;
   margin: 0 auto;
-
 }
 
-.header-container{
+.header-container {
   height: 100vh;
   padding: 0rem 2rem;
   max-width: 60rem;
@@ -25,27 +29,35 @@
   display: flex;
 }
 
-.header-content{
+.home-face {
+  width: 32rem;
+  height: 32rem;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+}
+
+.header-content {
   margin: auto 0 !important;
 }
 
-h2{
+h2 {
   padding-bottom: 1rem;
 }
-.container{
+.container {
   padding: 0rem 2rem;
   margin-top: 4rem !important;
   max-width: 60rem;
   margin: 0 auto;
 }
 
-.header-container h1{
-    font-size: 4rem;
-    margin-top: -1rem;
-    color: #2e2e2e;
+.header-container h1 {
+  font-size: 4rem;
+  margin-top: -1rem;
+  color: #2e2e2e;
 }
 
-.header-title{
+.header-title {
   width: 80%;
   margin: 3rem 0rem;
   font-size: 1.25rem;
@@ -53,86 +65,94 @@ h2{
   color: #2e2e2e;
 }
 
-
-.home-header-socials{
+.home-header-socials {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-.social-icons{
+.social-icons {
   display: flex;
   gap: 0.5rem;
 }
 
-.home-header-buttons{
+.home-header-buttons {
   display: flex;
   gap: 1rem;
 }
 
-.roundbutton{
-    min-width: 12.5rem;
-    height: 2.5rem;
-    border-radius: 3rem;
-    border:none;
-    font-family: 'Montserrat', sans-serif;
-    cursor: pointer;
-    margin-right: 1.5rem;
+.roundbutton {
+  min-width: 12.5rem;
+  height: 2.5rem;
+  border-radius: 3rem;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+  margin-right: 1.5rem;
+}
+
+.primary-button {
+  color: #fff;
+  background-color: #5d4fff;
+}
+
+.primary-button:hover {
+  opacity: 0.9;
+}
+
+.paragraph-content {
+  width: 60%;
+}
+
+@media only screen and (max-width: 480px) {
+  .header-background {
+    height: 100vh;
   }
-
-  .primary-button{
-    color:#fff;
-    background-color: #5D4FFF;
+  .header-title {
+    margin: 2rem 0rem !important;
+    font-size: 1rem;
   }
-
-  .primary-button:hover{
-    opacity: 0.9;
+  .header-container h1 {
+    font-size: 3.5rem;
   }
-
-
-  .paragraph-content{
-    width:60%;
+  .home-header-socials {
+    gap: 3rem;
+    flex-direction: column !important;
+    align-items: flex-start;
   }
-
-  @media only screen and (max-width: 480px){
-    .header-background{
-      height: 100vh;
-    }
-    .header-title{
-      margin: 2rem 0rem !important;
-      font-size: 1rem;
-    }
-    .header-container h1{
-      font-size: 3.5rem;
-    }
-    .home-header-socials{
-      gap:3rem;
-      flex-direction: column !important;
-      align-items: flex-start;
-    }
-    .my-work-container h2{
-      padding-left: 1rem;
-    }
-    .my-work-container{
-      margin-top: 4rem !important;
+  .my-work-container h2 {
+    padding-left: 1rem;
+  }
+  .my-work-container {
+    margin-top: 4rem !important;
     padding: 0;
-    }
-    .header-container, .container{
-      padding: 0 1rem;
-    }
-    .container{
-      margin-top: 4rem !important;
-    }
-
-    .paragraph-content{
-      width: 100%;
-    }
-    
-    .page-body{
-      width: 100%;
-      padding: 0 0.5rem;
-    }
-    .home-header-socials{
-      flex-direction: row;
-    }
   }
+  .header-container,
+  .container {
+    padding: 0 1rem;
+  }
+  .container {
+    margin-top: 4rem !important;
+  }
+
+  .home-face {
+    width: 32rem;
+    height: 32rem;
+    top: auto;
+    bottom: 0;
+    left: 25%;
+    opacity: 0.75;
+    z-index: -1;
+  }
+  .paragraph-content {
+    width: 100%;
+  }
+
+  .page-body {
+    width: 100%;
+    padding: 0 0.5rem;
+  }
+  .home-header-socials {
+    flex-direction: row;
+  }
+}
