--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -73,6 +73,7 @@
     overflow-y: hidden;
     overflow-x: auto;
     padding: 1rem 2rem 4rem 1rem;
+    gap: 1rem;
   }
   .workitem-container {
     width: 19rem;
