--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -8,10 +8,11 @@
     rgba(255 255 255 / 0),
     rgba(93 79 255 / 1)
   );
-  z-index: -1;
+  z-index: -99;
   top: 0;
   left: 0;
   right: 0;
+  overflow: hidden;
 }
 
 .my-work-container {
@@ -33,8 +34,49 @@
   width: 32rem;
   height: 32rem;
   position: absolute;
-  top: 15%;
+  bottom: 0;
+  left: 40%;
+  z-index: -10;
+}
+
+.sphere {
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.first {
+  width: 10rem;
+  height: 10rem;
+  top: 25%;
   left: 50%;
+  z-index: -20;
+  background: radial-gradient(ellipse at 0.25% 0.25%, #fff, #5d4fff, #3324e7);
+}
+
+.second {
+  width: 16rem;
+  height: 16rem;
+  bottom: 0;
+  right: 15%;
+  background: radial-gradient(ellipse at 0.5% 3%, #fff, #5d4fff, #3324e7);
+}
+
+.third {
+  width: 5rem;
+  height: 5rem;
+  top: 10%;
+  right: 20%;
+  background: radial-gradient(ellipse at 0.1% 0.1%, #fff, #5d4fff, #3324e7);
+}
+
+.fourth {
+  width: 40rem;
+  height: 40rem;
+  background: radial-gradient(ellipse at 0.1% 0.1%, #fff, #5d4fff, #3324e7);
+  right: -20%;
+  bottom: 0;
+  opacity: 0.4;
 }
 
 .header-content {
@@ -136,18 +178,32 @@ h2 {
   }
 
   .home-face {
-    width: 32rem;
-    height: 32rem;
+    width: 30rem;
+    height: 30rem;
     top: auto;
     bottom: 0;
-    left: 25%;
-    opacity: 0.75;
+    left: 15%;
     z-index: -1;
   }
   .paragraph-content {
     width: 100%;
   }
-
+  .first {
+    display: none;
+  }
+  .second {
+    left: 10%;
+    bottom: 5%;
+    width: 10rem;
+    height: 10rem;
+    z-index: -30;
+  }
+  .third {
+  }
+  .fourth {
+    bottom: -30%;
+    right: -60%;
+  }
   .page-body {
     width: 100%;
     padding: 0 0.5rem;
