--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -14,7 +14,6 @@
   right: 0;
   overflow: hidden;
 }
-
 .my-work-container {
   padding: 0rem 2rem;
   margin-top: 4rem !important;
@@ -93,7 +92,12 @@
   height: 5rem;
   top: 10%;
   right: 20%;
-  background: radial-gradient(ellipse at 0.1% 0.1%, #fff, #5d4fff, #3324e7);
+  background: radial-gradient(
+    ellipse at 0.1% 0.1%,
+    #fff,
+    hsl(245, 100%, 65%),
+    #3324e7
+  );
   animation: moveThird 8s infinite;
 }
 
