--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,24 +2,11 @@
   width: 100%;
   height: 100vh;
   position: absolute;
-  background-image: linear-gradient(
-    120deg,
-    rgba(255 255 255 / 0),
-    rgba(255 255 255 / 0),
-    rgba(93 79 255 / 1)
-  );
   z-index: -99;
   top: 0;
   left: 0;
   right: 0;
   overflow: hidden;
-}
-
-.my-work-container {
-  padding: 0rem 2rem;
-  margin-top: 4rem !important;
-  max-width: 60rem;
-  margin: 0 auto;
 }
 
 .header-container {
@@ -137,19 +124,20 @@
 
 .sectionHeading {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
   padding-bottom: 2rem;
-  gap: 0.5rem;
 }
 
 .sectionHeading h4 {
-  color: #5d4fff;
+  font-size: 1.5rem;
+  color: #323232;
 }
 
 .headerLine {
-  width: 4rem;
-  height: 2px;
-  background-color: #5d4fff;
+  width: 2rem;
+  height: 1.5px;
+  background-color: #323232;
   border: none;
   margin: 0;
 }
@@ -158,26 +146,46 @@
   color: #5d4fff;
   margin-left: auto;
 }
-
+/* Standard Containers */
 .container {
   padding: 0rem 2rem;
-  padding-top: 2rem !important;
-  padding-bottom: 2rem !important;
+  margin-top: 7.5rem !important;
+  max-width: 60rem;
+  margin: 0 auto;
+}
+/*---------------------*/
+/* Last Containers */
+.lastContainer {
+  margin-bottom: 7.5rem !important;
+}
+/*---------------------*/
+/* Coloured Containers */
+
+.colouredInnerContainer {
+  padding: 0rem 2rem;
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
   max-width: 60rem;
   margin: 0 auto;
 }
 
-.backgroundContainer {
-  background-color: #5d4fff;
-  padding: 4rem 0rem;
+.colouredContainer {
+  margin-top: 7.5rem !important;
+  background: rgb(189, 79, 255);
+  background: linear-gradient(
+    125deg,
+    rgba(189, 79, 255, 1) 0%,
+    rgba(93, 79, 255, 1) 100%
+  );
 }
+/*---------------------*/
 
-.backgroundContainer .about-me .sectionHeading .headerLine {
+.colouredContainer .about-me .sectionHeading .headerLine {
   background-color: #fff;
 }
 
-.backgroundContainer .about-me .sectionHeading h4,
-.backgroundContainer .about-me .paragraph-content {
+.colouredContainer .about-me .sectionHeading h4,
+.colouredContainer .about-me .paragraph-content {
   color: #fff;
 }
 
@@ -212,7 +220,7 @@
 }
 
 .roundbutton {
-  min-width: 12.5rem;
+  max-width: 11.25rem;
   height: 2.5rem;
   border-radius: 3rem;
   border: none;
@@ -223,7 +231,12 @@
 
 .primary-button {
   color: #fff;
-  background-color: #5d4fff;
+  background: rgb(189, 79, 255);
+  background: linear-gradient(
+    125deg,
+    rgba(189, 79, 255, 1) 0%,
+    rgba(93, 79, 255, 1) 100%
+  );
 }
 
 .primary-button:hover {
@@ -234,7 +247,20 @@
   width: 60%;
 }
 
+/*Contact Form*/
+.contactContainer{
+  display: flex;
+}
+
+.halfForm{
+  flex: 1;
+}
+/*---------------------*/
+
 @media only screen and (max-width: 480px) {
+  .contactContainer{
+    flex-direction: column;
+  }
   .header-background {
     height: 100vh;
   }
