--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,32 @@
-body,html {
+body,
+html {
   padding: 0;
   margin: 0;
   position: relative;
   height: 100%;
   overflow-x: hidden;
   width: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,h2,h3,h4,p,a{
-  margin:0;
-  padding:0;
-  font-family: 'Montserrat', sans-serif;
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-p{
+p {
   font-size: 0.875rem;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
