--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -7,8 +7,9 @@
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  gap:2rem;
+  display: flex;
 }
 
 .footer-list {
@@ -21,7 +22,9 @@
 .footer-list p {
   margin-bottom: 0.5rem;
 }
-
+.footer-socials .social-icons svg{
+  color: #fff;
+}
 .footer-madeby {
   padding: 4rem 0rem;
   text-align: center;
