--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -214,6 +214,11 @@
   display: flex;
   gap: 1rem;
 }
+.workItemButton{
+  padding-top:4rem;
+  display: flex;
+  justify-content: center;
+}
 
 .roundbutton {
   width: 11.25rem;
@@ -224,7 +229,14 @@
   cursor: pointer;
   margin-right: 1.5rem;
 }
-
+.secondary-button{
+  background: none;
+  border: 1.5px solid #5d4fff;
+  color: #5d4fff;
+}
+.secondary-button:hover{
+  background:rgba(93, 79, 255, 0.05);
+}
 .primary-button {
   color: #fff;
   background: rgb(189, 79, 255);
@@ -288,7 +300,9 @@
   .container {
     padding: 0 1rem;
   }
-
+.workItemButton{
+  padding: 1rem;
+}
   .home-face {
     display: none;
   }
