--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -5,7 +5,7 @@
     rgba(189, 79, 255, 1) 0%,
     rgba(93, 79, 255, 1) 100%
   );
-  padding: 8rem 0rem;
+  padding: 4rem 0rem;
 }
 
 .projectHeaderInner {
@@ -14,7 +14,7 @@
 }
 
 .project-header .page-heading {
-  padding-top: 1rem;
+  padding: 0;
   color: #fff;
 }
 .project-line {
@@ -30,13 +30,13 @@
   padding-bottom: 1rem;
 }
 
-.process-container {
+/* .process-container {
   display: flex;
   gap: 1rem;
 }
 .process-container > * {
   flex: 1;
-}
+} */
 .finalSolutionContainer{
   display: flex;
   flex-direction: column;
@@ -53,9 +53,21 @@
   color: #fff;
 }
 
-.projectIntoductionText {
+.projectIntroductionText {
   color: #fff;
   font-size: 1.25rem;
+}
+
+.projectDetails{
+  color: #fff;
+  margin-top: 4rem;
+  gap:2rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.details h4{
+ margin-bottom: 0.5rem;
 }
 
 .process-header {
@@ -67,6 +79,7 @@
 }
 
 .processName {
+  font-size: 1.5rem;
   color: #5d4fff;
 }
 
@@ -85,7 +98,8 @@
 .process-text {
   white-space: pre-line;
   vertical-align: bottom;
-  font-size: 0.875rem;
+  font-size: 1.125rem;
+  color: #2e2e2e;
 }
 .process-textSolution {
   white-space: pre-line;
@@ -112,6 +126,9 @@
     flex-direction: column;
   }
   .process-container {
+    flex-direction: column;
+  }
+  .projectDetails{
     flex-direction: column;
   }
 }
