--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -1,30 +1,24 @@
 .workitems {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 2rem;
 }
 .workitem-container {
-  width: 100%;
-  height: 19rem;
+  text-decoration: none;
+  padding: 1.5rem;
   background-color: #fff;
-  filter: drop-shadow(0rem 1rem 1rem rgb(27 0 49 / 0.15));
+  filter: drop-shadow(0rem 0rem 1.5rem rgb(27 0 49 / 0.25));
   border-radius: 0.5rem;
   transition: transform 0.2s;
-  position: relative;
 }
 
 .project-image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  position: absolute;
-  top: 0;
-  z-index: -2;
   border-radius: 0.5rem;
 }
 
 .workitem-content {
-  position: absolute;
-  opacity: 0;
   bottom: 0.5rem;
   padding: 1rem;
   border-radius: 0 0 0.5rem 0.5rem;
@@ -32,28 +26,25 @@
   transform: translateY(0.5rem);
   transition: opacity 0.2s, transform 0.5s;
 }
-.workitem-container h4 {
+.workitem-container h3 {
   color: #5d4fff;
   font-weight: 600;
   margin-bottom: 0.5rem;
 }
+
+.workitem-container h4{
+  color: #2e2e2e;
+  margin-bottom: 0.5rem;
+}
+
+Link{
+  text-decoration: none;
+}
 .workitem-content p {
   color: #2e2e2e;
   font-weight: 300;
+  padding-bottom: 1rem;
 }
-
-.work-item-background {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  width: 100%;
-  height: 0rem;
-  background-color: #fff;
-  border-radius: 0rem 0rem 0.5rem 0.5rem;
-  transition: opacity 0.5s;
-}
-
 .workitem-container:hover > .workitem-content {
   opacity: 1;
   cursor: pointer;
@@ -64,31 +55,10 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width: 481px) {
+@media only screen and (max-width: 768px) {
   .workitems {
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
-    flex-wrap: nowrap;
-    overflow-y: hidden;
-    overflow-x: auto;
-    padding: 1rem 2rem 4rem 1rem;
-    gap: 1rem;
-  }
-
-  .workitems::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
-  }
-
-  .workitem-container {
-    width: 14rem;
-    flex: 0 0 auto;
-  }
-  .workitem-content {
-    opacity: 1;
-  }
-
-  .work-item-background {
-    opacity: 1;
-    height: 8rem;
+    grid-template-columns: 1fr;
+    padding: 2rem 1rem 0rem 1rem;
+    gap: 2.5rem;
   }
 }
