--- a/src/Pages/MyWork.css
+++ b/src/Pages/MyWork.css
@@ -1,9 +1,3 @@
-.page-container {
-  margin-top: 3.5rem;
-}
-
-.page-heading {
-  padding-top: 4rem;
-  padding-bottom: 1rem;
-  font-size: 4rem;
+.pageHeading{
+font-weight: 600;
 }
