--- a/src/Pages/MyWork.css
+++ b/src/Pages/MyWork.css
@@ -1,3 +1,6 @@
-.pageHeading{
-font-weight: 600;
+.pageHeading {
+  padding-top: 4rem;
+  font-weight: 600;
+  max-width: 60rem;
+  margin: 0 auto;
 }
