--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,12 @@ html {
   height: 100%;
   overflow-x: hidden;
   width: 100%;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Golos Text", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* ---------- Typography ---------- */
 h1,
 h2,
 h3,
@@ -23,7 +24,13 @@ button {
   padding: 0;
   font-family: "Golos Text", sans-serif;
 }
+button{
+  font-weight: 300;
+  font-size: 0.875rem;
+}
+
 h4 {
+  font-weight: 300;
   font-size: 1rem;
 }
 h3 {
@@ -45,18 +52,13 @@ p {
 b {
   font-weight: 600;
 }
+
+/* ---------- Containers ---------- */
+
 .containerPlain {
   padding: 4rem 1rem;
   max-width: 60rem;
   margin: 0 auto;
-}
-
-.headerLineLarge {
-  width: 4rem;
-  background-color: #fff;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  margin: 4rem 0rem;
 }
 
 .colouredBackground {
@@ -69,10 +71,23 @@ b {
   );
 }
 
+.greyBackground{
+  margin: 0 auto;
+  background: #FAFAFA;
+}
+
 .page-container {
   margin-top: 3.5rem;
 }
+/* ---------- Other ---------- */
 
+.headerLineLarge {
+  width: 4rem;
+  background-color: #fff;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  margin: 4rem 0rem;
+}
 .pageHeadingWhite {
   font-weight: 600;
   font-size: 4rem;
