--- a/src/Pages/Project.css
+++ b/src/Pages/Project.css
@@ -1,46 +1,16 @@
-.project-header {
-  background: rgb(189, 79, 255);
-  background: linear-gradient(
-    125deg,
-    rgba(189, 79, 255, 1) 0%,
-    rgba(93, 79, 255, 1) 100%
-  );
-  padding: 4rem 0rem;
-}
-
-.projectHeaderInner {
-  max-width: 60rem;
-  margin: 0 auto;
-}
-
-.project-header .page-heading {
-  padding: 0;
-  color: #fff;
-}
-
 .subHeading {
   font-size: 1.5rem;
   padding-bottom: 1rem;
 }
 
-/* .process-container {
-  display: flex;
-  gap: 1rem;
-}
-.process-container > * {
-  flex: 1;
-} */
 .finalSolutionContainer{
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.finalSolutionContainer .process-textSolution{
-  font-size: 18px;
-}
-.finalSolutionContainer .process-image img {
+
+.process-image img {
   width: 100%;
-  height: 100%;
 }
 
 /* ---------- Project Header ---------- */
@@ -48,6 +18,7 @@
   width: 100%;
   object-fit: contain;
   margin-bottom: 6rem;
+  filter: drop-shadow(0rem 0rem 1rem rgb(27 0 49 / 0.35));
 }
 .projectDetailsContainer{
   display: flex;
@@ -65,11 +36,14 @@
   flex-direction: column;
   justify-content: space-between;
   min-width: 30%;
+  background: #eee;
+  padding: 1.5rem;
+  border-radius: 1rem;
 }
 
 .details h4{
   color: #5d4fff;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 0.5rem;
 }
 
@@ -92,19 +66,17 @@
 .process-text {
   white-space: pre-line;
   vertical-align: bottom;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: #2e2e2e;
 }
 .process-textSolution {
   white-space: pre-line;
   color: #fff;
-  font-size: 0.875rem;
+  font-size: 1rem;
+  font-weight: 300;
 }
 .moreProjectsContainer{
   padding-bottom: 4rem;
-}
-.projectImages {
-  display: flex;
 }
 
 .projectImage img {
