--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html {
   height: 100%;
   overflow-x: hidden;
   width: 100%;
-  font-family: "Golos Text", sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -22,11 +22,12 @@ a,
 button {
   margin: 0;
   padding: 0;
-  font-family: "Golos Text", sans-serif;
+  font-family: 'Poppins', sans-serif;
+
 }
 button{
   font-weight: 300;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 
 h4 {
@@ -103,4 +104,8 @@ b {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media only screen and (max-width: 480px) {
+
 }
