--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -250,6 +250,9 @@ a {
 /*---------------------*/
 
 @media only screen and (max-width: 480px) {
+  .contactContainer{
+    max-width: 100%;
+  }
   .header-content h1 {
     font-size: 3rem;
   }
