--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -1,26 +1,31 @@
 .workitems {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap:1.5rem;
 }
 .workitem-container {
   text-decoration: none;
-  padding: 1.5rem;
   background-color: #fff;
   filter: drop-shadow(0rem 0rem 1rem rgb(27 0 49 / 0.25));
   border-radius: 0.5rem;
   transition: transform 0.2s;
+
+  padding: 1.5rem 4rem 1.5rem 1.5rem;
+  max-height: 400px;
+  display: flex;
+  flex-direction: row;
+  gap: 4rem;
+  align-items: center;
 }
 
 .project-image {
-  width: 100%;
+  width: 40%;
   object-fit: cover;
   border-radius: 0.5rem;
 }
 
 .workitem-content {
   bottom: 0.5rem;
-  padding: 1rem 0rem;
   border-radius: 0 0 0.5rem 0.5rem;
   background-color: #fff;
   transform: translateY(0.5rem);
@@ -29,11 +34,9 @@
   flex-direction: column;
   gap:1.5rem;
 }
-.workitem-container h3 {
-  color: #5d4fff;
-}
 
 .workitem-container h4{
+  font-size: 1rem;
   color: #4F4F4F;
 }
 
@@ -52,8 +55,17 @@ Link{
 }
 
 @media only screen and (max-width: 768px) {
-  .workitems {
-    grid-template-columns: 1fr;
-    gap: 2.5rem;
+  .workitem-container {
+    padding: 1.5rem;
+    display: block;
+    max-height: none;
+  }
+
+  .project-image{
+    width:100%
+  }
+
+  .workitem-content{
+    padding: 1.5rem 0rem;
   }
 }
